src/dcp-stream.cc
@@ -1506,10 +1506,17 @@ void PassiveStream::addStats(ADD_STAT add_stat, const void *c) {
 
     const int bsize = 128;
     char buf[bsize];
+    size_t buffer_bytes;
+    size_t buffer_items;
+    {
+        LockHolder lh(buffer.bufMutex);
+        buffer_bytes = buffer.bytes;
+        buffer_items = buffer.items;
+    }
     snprintf(buf, bsize, "%s:stream_%d_buffer_items", name_.c_str(), vb_);
-    add_casted_stat(buf, buffer.items, add_stat, c);
+    add_casted_stat(buf, buffer_items, add_stat, c);
     snprintf(buf, bsize, "%s:stream_%d_buffer_bytes", name_.c_str(), vb_);
-    add_casted_stat(buf, buffer.bytes, add_stat, c);
+    add_casted_stat(buf, buffer_bytes, add_stat, c);
     snprintf(buf, bsize, "%s:stream_%d_items_ready", name_.c_str(), vb_);
     add_casted_stat(buf, itemsReady.load() ? "true" : "false", add_stat, c);
     snprintf(buf, bsize, "%s:stream_%d_last_received_seqno", name_.c_str(), vb_);
